added  -P classes to Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -24,6 +24,7 @@ clean:
 
 $(MAKEDIR): $(MAINFILE) clean
 	@echo "Creating buffer directories for intermediate storage 'classes'..."
+	@mkdir -P classes
 
 $(MAINFILE): RouterProcess.java
 	@echo "Analyzing moon surface for rover deployment..."
