--- a/src/Makefile
+++ b/src/Makefile
@@ -24,7 +24,7 @@ clean:
 
 $(MAKEDIR): $(MAINFILE) clean
 	@echo "Creating buffer directories for intermediate storage 'classes'..."
-	@sudo mkdir -P classes
+	@mkdir -p classes
 
 $(MAINFILE): RouterProcess.java
 	@echo "Analyzing moon surface for rover deployment..."
